# odse

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  LICENSE-CODE.md  LICENSE-SPEC.md  README.md  ROADMAP.md  SECURITY.md
.github/: pull_request_template.md
demos/: bayou_solar_farm_sma_export.csv  erp-enrichment-starter.ipynb  forecasting.ipynb  winter-storm-fern-analysis.ipynb
erp-transforms/: ifs-cloud.yaml
examples/: README.md  basic_transform.py  batch_directory.py  eskom_and_scl_demo.py  generic_csv_transform.py  mqtt_ingest_config.yaml  pipeline.py
schemas/: alarm-frequency-profile.json  asset-metadata.json  energy-timeseries.json  (+8 more)
src/python/: pyproject.toml  setup.py
src/python/ods_e/: __init__.py  transformer.py  validator.py
src/python/odse/: __init__.py  cli.py  enrichment.py  io.py  regulatory.py  transformer.py  validator.py
src/python/odse/connectors/: __init__.py  mqtt.py  opcua.py  scl.py
src/python/tests/: test_batch_validation.py  test_bess_transforms.py  test_cli.py  test_csv_mapper.py  test_enrichment.py  test_erp_schemas.py  test_eskom_connectors.py  test_industrial_connectors.py  test_io.py  test_regulatory_transform.py  test_scl_connector.py  test_terraco_transform.py  test_transformer_runtime.py  test_wind_transforms.py
src/python/tests/fixtures/: byd_bess_sample.csv  eskom_amr_sample.csv  eskom_portal_sample.csv  nordex_control_sample.csv  siemens_gamesa_sample.csv  sungrow_powertitan_sample.json  terraco_csv_sample.csv  terraco_rest_sample.json  vestas_online_sample.csv
(+59 files in other folders)
