[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ods-e"
version = "0.1.0"
description = "Open Data Schema for Energy - validation and transformation library"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Asoba Corporation", email = "support@asoba.co"}]
requires-python = ">=3.8"
keywords = ["energy", "solar", "iot", "data", "schema", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "jsonschema>=4.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/AsobaCloud/odse"
Documentation = "https://docs.asoba.co/ona-protocol/overview"
Repository = "https://github.com/AsobaCloud/odse"

[project.scripts]
ods-e = "ods_e.cli:main"

[tool.setuptools.packages.find]
where = ["."]
